<resources>
    <string name="app_name">Pickup</string>

    <string name="zero">0</string>
    <string name="none">N/A</string>

    <!-- Skill levels -->
    <string name="skill_beginner">Beginner</string>
    <string name="skill_rookie">Rookie</string>
    <string name="skill_intermediate">Intermediate</string>
    <string name="skill_highschool">HighSchool Level</string>
    <string name="skill_college">College Level</string>

    <!-- Splash screen strings -->
    <string name="splashScreenRetryCountdown">It seems like our servers are a bit slow, retrying in %1$d seconds.</string>
    <string name="splashScreenServerDown">Our servers seem to be down right now. Sorry for the inconvenience, please try again in a few minutes!</string>

    <!-- Strings related to login -->
    <string name="welcome">Welcome to PickUp</string>
    <string name="create_account"> <u>Create an Account</u></string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign me up!</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer Not To Say</item>
    </string-array>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_other_gender">Other</string>
    <string name="prompt_skill_level">Select your skill level</string>
    <string name="selected_location">Where are you?</string>
    <string name="prompt_default_location">Default Location</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_name">This name is invalid, use alphabetical letters</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_mismatch_password">Password does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_under_age">You must be over 18 years old!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- string for the profile page -->
    <string name="header_name">Pickup Dude</string>
    <string name="profile_description">This is a basketball lover who outscores Michael Jordan easily&#8230; in 2k!</string>
    <string name="self_setting">Settings</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_message">Do you want to sign out?</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_search">Search</string>

    <string name="birthday">Choose Date</string>
    <string name="dob_label">Date of Birth</string>

    <string name="nav_open">Opened Nav</string>
    <string name="nav_closed">Closed Nav</string>

    <!-- Strings related to Create Game -->
    <string name="create_new_game_title">Create Game</string>
    <string name="create_new_game_name">Game Name:</string>
    <string name="create_new_game_type">Game Type:</string>
    <string name="create_new_game_total_players_message">Total number of Players: %d</string>
    <string name="create_new_game_location_notes">Location Notes:</string>
    <string name="create_new_game_description">Description:</string>
    <string name="create_new_game_description_hint">Tell us about your game...</string>
    <string name="create_new_game_skill_message">Skill: %d </string>
    <string name="create_new_game_skill_offset_message">Skill offset: up to %d levels away from you </string>

    <string name="create_new_game_restrictions_section_title">Game Restrictions</string>
    <string name="create_new_game_want_restrictions">Would you like to apply any restrictions?</string>
    <string name="create_new_game_age_restriction">Age</string>
    <string name="create_new_game_18_range">18 - 25</string>
    <string name="create_new_game_25_range">25 - 35</string>
    <string name="create_new_game_35_range">35 - 40</string>
    <string name="create_new_game_45_range">45 - onwards</string>
    <string name="create_new_game_gender_restriction">Gender</string>
    <string name="create_new_game_male_gender">Male</string>
    <string name="create_new_game_female_gender">Female</string>
    <string name="create_new_game_other_gender">Other</string>
    <string name="create_new_game_player_restricted">Player Restricted</string>
    <string name="create_new_game_yes_restricted">Yes</string>
    <string name="create_new_game_no_restricted">No</string>

    <string name="create_new_game_time">"Time: "</string>
    <string name="create_new_game_time_hint">%s - %s</string>
    <string name="create_new_game_location">"Location: "</string>
    <string name="create_new_game_location_hint">"Select the game's location"</string>


    <!-- Main search page -->
    <string name="main_search_games_tab_title">Games</string>
    <string name="main_search_search_button_label">Search</string>
    <string name="main_search_nothing_matches">Nothing seems to match your search criteria. Please adjust your search and try again.</string>
        <!-- Game search page -->
        <!-- Filters Section -->
        <string name="search_games_filters_section_title">Filters</string>
        <string name="game_search_minimum_player_message">Minimum Players Required: %d</string>
        <string name="game_search_skill_range">Skill level: %d - %d</string>
        <string name="game_search_show_restricted_games">Show Restricted Games</string>
        <string name="game_search_game_type">Game Type</string>
        <string name="game_search_game_type_casual">Casual</string>
        <string name="game_search_game_type_serious">Serious</string>
        <!-- Details Section -->
        <string name="search_games_details_section_title">Game Details</string>
        <string name="game_search_date_range_label">Date Range</string>
        <string name="game_search_date_range_display_text_label">%s - %s</string>
        <string name="game_search_date_range_start_message">Choose the start date</string>
        <string name="game_search_date_range_end_message">Choose the end date</string>
        <string name="game_search_location_label">City</string>
        <string name="game_search_location_range_label">Range</string>
        <string-array name="game_search_location_range_spinner">
            <item><string name="game_search_location_range_option_200">200 KM</string></item>
            <item><string name="game_search_location_range_option_150">150 KM</string></item>
            <item><string name="game_search_location_range_option_100">100 KM</string></item>
            <item><string name="game_search_location_range_option_50">50 KM</string></item>
            <item><string name="game_search_location_range_option_25">25 KM</string></item>
            <item><string name="game_search_location_range_option_15">15 KM</string></item>
            <item><string name="game_search_location_range_option_10">10 KM</string></item>
            <item><string name="game_search_location_range_option_5">5 KM</string></item>
        </string-array>
        <!-- Specifics Section -->
        <string name="search_games_specifics_section_title">Game Specifics</string>
        <string name="search_games_specifics_game_name_label">Game Name:</string>
        <string name="search_games_specifics_game_name_hint">Game name not specified</string>
        <string name="search_games_specifics_game_id_label">Game Id:</string>
        <string name="search_games_specifics_game_id_hint">Game Id not specified</string>
        <string name="search_games_specifics_game_id_tooltip">Searching by game id will ignore other search parameters as game id is unique to each game.</string>
        <!-- User search page -->
        <string name="search_users_username_label">Username: </string>
        <string name="search_users_username_hint">Enter username here</string>
    <string name="main_search_users_tab_title">Users</string>

    <!-- Extended Profile strings -->
    <string name="extended_profile_games_created">Game(s) Created</string>
    <string name="extended_profile_games_played">Game(s) Played</string>
    <string name="extended_profile_top_tag">Top Tag</string>
    <string name="extended_profile_top_tag_awarded">Top Tag Awarded</string>
    <string name="extended_profile_top_tag_value">%s (x%d)</string>
    <string name="extended_profile_age_text">%s years old</string>
    <string name="extended_profile_average_review_label">Average Rating</string>
    <string name="extended_profile_no_tags">You have not been reviewed yet</string>
    <string name="extended_profile_skill_text">%s (%d)</string>

</resources>
