<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <item
        android:title="@string/title_activity_map"
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:checked="true"
        />
    <item
        android:title="@string/title_activity_profile"
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        />
    <item
        android:title="@string/title_activity_settings"
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        />
    <item
        android:title="@string/sign_out_title"
        android:id="@+id/action_sign_out"
        android:enabled="true"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        />
</menu>