<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sotifc2017.pickup.fragments.CreateGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/create_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingTop="30dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/create_new_game_title"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/create_new_game_title"
                android:textSize="@dimen/app_titles" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_new_game_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/create_new_game"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/new_game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="3dp"
                android:paddingEnd="20dp"
                android:paddingTop="2dp"
                android:text="@string/create_new_game_name"/>

            <AutoCompleteTextView
                android:id="@+id/edit_new_game_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_new_game_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/new_game_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="3dp"
                android:paddingEnd="20dp"
                android:paddingTop="2dp"
                android:text="@string/create_new_game_type"/>

            <AutoCompleteTextView
                android:id="@+id/edit_new_game_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
