<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sotifc2017.pickup.fragments.ExtendedProfileFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_orange"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="20dp"
                    android:textColor="@color/primary_dark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/add_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/gamesValue"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:visibility="invisible"
                    android:background="@null"
                    android:tint="@color/primary_dark"
                    android:src="@drawable/ic_person_add_black_24dp" />



                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/gamesValue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/gamesCreatedValue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/primary_dark" />

                    <TextView
                        android:id="@+id/gamesPlayedValue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/primary_dark" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/gamesTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gamesValue"
                    android:orientation="horizontal"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/gamesCreated"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/primary_dark"
                        android:text="@string/extended_profile_games_created" />

                    <TextView
                        android:id="@+id/gamesPlayed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/primary_dark"
                        android:text="@string/extended_profile_games_played" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/averageReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="10dp"
                    android:layout_below="@+id/gamesTitle"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/averageReviewValue"
                        android:rating="5"
                        android:stepSize="0.5"
                        android:numStars="5"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:isIndicator="true"
                        android:progressTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/TopTag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/averageReview"
                    android:paddingTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/toptag"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/primary_dark"
                        android:text="@string/extended_profile_top_tag" />

                    <TextView
                        android:id="@+id/topTagAwarded"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/primary_dark"
                        android:text="@string/extended_profile_top_tag_awarded" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:paddingTop="30dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:id="@+id/age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/skill_level"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:layout_below="@+id/info"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="24dp"
                    android:src="@drawable/ic_place_black_24dp"
                    android:layout_height="24dp"
                    android:paddingTop="1dp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="3dp"
                    android:paddingTop="2dp" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>
